Fixed layout styles on mobile

--- a/src/components/AboutContent/about-content.module.scss
+++ b/src/components/AboutContent/about-content.module.scss
@@ -14,6 +14,7 @@
   background-repeat: no-repeat;
 
   @include media('<small') {
+    height: initial;
     background-image: none;
   }
 }
