--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,3 +1,4 @@
+@import 'src/sass/vendors/include-media';
 @import 'src/sass/variables/colors';
 @import 'src/sass/variables/typography';
 @import 'src/sass/variables/layout';
@@ -12,6 +13,14 @@
   align-items: flex-start;
   justify-content: space-between;
   height: $header-height;
+
+  @include media('<small') {
+    position: static;
+    right: initial;
+    left: initial;
+    padding: 0 1em;
+    margin: 2em 0 3em;
+  }
 }
 
 .text {
@@ -23,8 +32,15 @@
 .name {
   font-size: $big-font-size;
   color: $white;
+
+  @include media('<small') {
+    font-size: $root-font-size;
+  }
 }
 
 .role {
   color: $light-grey;
+  @include media('<small') {
+    font-size: 95%;
+  }
 }
