--- a/src/components/Text/text.module.scss
+++ b/src/components/Text/text.module.scss
@@ -11,6 +11,5 @@
 
   @include media('<small') {
     font-size: $small-font-size;
-    padding: 0 1em;
   }
 }
